# my-tlpi

./: .gitignore  CMakeLists.txt  README.md  c_simple_tst.c
fileio/: copy.c
lib/: error_functions.c  error_functions.h  tlpi_hdr.h
mmap/: t_mmap.c
procexec/: t_fork.c
